<resources>
    <string name="app_name">Kelong Makassar</string>

    <string name="label_menu">Menu</string>
    <string name="label_kelong">Yuk, dengar Kelong Makassar!</string>
    <string name="label_tutorial">Yuk, belajar bernyanyi Kelong Makassar!</string>
    <string name="label_games">Yuk bermain!</string>

    <string name="label_lyrics">Lirik &amp; Arti</string>
    <string name="label_music_notes">Partitur</string>
    <string name="label_music_meaning">Makna</string>

    <string name="label_tutorial_example">Ayo, bernyanyi!</string>
    <string name="label_atiraja_vocal">Ati Raja dengan vokal</string>
    <string name="label_atiraja_no_vocal">Ati Raja tanpa vokal</string>
    <string name="label_info_kelong">Info Kelong Makassar</string>
    <string name="label_info_kelong_short">Info Kelong</string>
    <string name="label_profile">Profil</string>

    <string name="title_tracks">Playlist</string>
    <string name="title_track">Track 1</string>
    <string name="title_tutorial">Tokko-Tokkona</string>
    <string name="text_tutorial_desc">Istilah-istilah dalam bernyanyi Khas Kelong Makassar</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="desc_app">A short description about this application.</string>
    <string name="text_long_desc_kelong">Kelong Makassar adalah kumpulan syair-syair dalam puisi yang telah mengakar pada masyarakat Makassar dan dikembangkan menjadi kumpulan lagu-lagu daerah dengan deratan nada-nada dan irama tertentu. Kelong Makassar atau Kelong Tau riolo (lagu orang dulu) adalah nyanyian yang dulunya diciptakan oleh penyair keturunan tonghoa bernama Ho Eng Dji (HED) yang lahir di Kassiq Keboq (kampong cina) pada tanggal 27 juli 1906. Perjalanannya dengan membentuk kelompok musik daerah dan berganti-ganti anggota untuk mempopulerkan lagu-lagunya tersebut diperjuangkan bersama kerabat-kerabatnya temasuk anaknya sendiri yang bernama Borahima Sinyo, hingga Presiden Soekarno pun berkenan menerimanya di Istana Negara pada tanggal 11 september 1953.Bukan hanya membicarakan perkembangan kesenian saja, HED juga mengutarakan harapannya agar kemasyarakatan antara orang tionghoa dan pribumi (Indonesia) kembali menjalin hubungan yang baik.\n\nKelong-kelong Makassar saat ini termasuk pewarisan budaya lokal yang patut dilestarikan serta dijaga keberadaanya, karena niai-nilai didalamnya banyak terkandung nasehat-nasehat tentang kehidupan dunia akhirat termasuk cinta dan kasih sayang. Adapun fungsi kelong Makassar antara lain seabagi media komunikasi, penyampaian tata cara bergaul, nyanyiannya berisi doa dan harapan kepada Tuhan Yang Maha Esa dan sebagai hiburan, Kelong juga termasuk karya sastra Bugis-Makassar yang terbilang sangat tua. Bagi masyarakat Makassar, kelong mendapat tempat tersendiri karena segala perasaan suka dan duka yang dialami masyarakatnya yang disampaikan melalui kelong.</string>

    <string name="text_info_kelong_desc">Yuk, dengar lagu Kelong Ati Raja versi Bapak Bundu\' (69 tahun)</string>

    <string name="text_info_kelong_name"><b>Nama :</b> Muh. Syarif Dg. Bundu (Pensiunan Pegawai Kebudayaan Peninggalan Sejarah dan Purbakala Provinsi SulSelTeng)</string>
    <string name="text_info_kelong_profesi"><b>Profesi :</b> Pemain Musik Tradisi Orkes Tauriolo (Biola dan Vokal) Bungabiraeng dan menggeluti dunia musik Kelong Makassar dari tahun 1955-Sekarang</string>
    <string name="text_info_kelong_date"><b>Tempat, Tanggal Lahir :</b> Gowa, 5 Juli 1949</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="text_numbering">%1$d.</string>
    <string name="text_tutorial_item_description">(%1$s)</string>
    <string name="text_kelong_question">Judul kelong di atas adalah…</string>
    <string name="label_score">Skor</string>
    <string name="label_play_again">Main Lagi</string>
</resources>
