<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/track_background"
    android:orientation="vertical"
    tools:context=".ui.tutorial.InfoKelongActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_back"
            android:layout_centerVertical="true"
            android:tint="@color/colorPrimary" />

        <TextView
            android:id="@+id/text_title"
            fontPath="fonts/BackToBlackDemo.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_info_kelong_short"
            android:textColor="@color/colorPrimary"
            android:textSize="32sp"
            android:textAlignment="center"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_info_kelong_desc"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textAlignment="center"/>
    
    <com.pierfrancescosoffritti.androidyoutubeplayer.player.YouTubePlayerView
        android:id="@+id/youtube_player"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_background_default"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            fontPath="fonts/ArcherBold.otf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:textAlignment="center"
            android:textSize="28sp"
            android:text="@string/label_profile" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_info_kelong_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_info_kelong_profesi" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_info_kelong_date" />
    </LinearLayout>
</LinearLayout>