<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/second_background"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.tutorial.TutorialActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_back"
            android:layout_centerVertical="true"
            android:tint="@color/colorPrimary" />

        <TextView
            fontPath="fonts/BackToBlackDemo.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_tutorial"
            android:textColor="@color/colorPrimary"
            android:textSize="32sp"
            android:textAlignment="center"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_tutorial_desc"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textAlignment="center"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview_tutorial_list"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                style="@style/MyButton"
                android:id="@+id/button_examples"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_tutorial_example" />

            <LinearLayout
                android:id="@+id/layout_tutorial_example"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_pull_down_menu" />

                <Button
                    style="@style/MyButton"
                    android:id="@+id/button_atiraja_vocal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/label_atiraja_vocal" />

                <Button
                    style="@style/MyButton"
                    android:id="@+id/button_atiraja_no_vocal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/label_atiraja_no_vocal" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
