<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/track_background"
    android:orientation="vertical"
    tools:context=".ui.tutorial.TutorialExampleActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_back"
            android:layout_centerVertical="true"
            android:tint="@color/colorPrimary" />

        <TextView
            android:id="@+id/text_song_title"
            fontPath="fonts/BackToBlackDemo.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_tutorial_example"
            android:textColor="@color/colorPrimary"
            android:textSize="32sp"
            android:textAlignment="center"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:layout_above="@id/button_info_kelong" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/image_play_media"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_play_small" />

                    <TextView
                        android:id="@+id/text_example_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:text="@string/label_atiraja_vocal"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"/>
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="88dp"
                    android:background="@drawable/rounded_background_default"
                    android:padding="6dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ati_raja_1" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="88dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_background_default"
                    android:padding="6dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ati_raja_2" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="88dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_background_default"
                    android:padding="6dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ati_raja_3" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="88dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_background_default"
                    android:padding="6dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ati_raja_4" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="88dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_background_default"
                    android:padding="6dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ati_raja_5" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="88dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_background_default"
                    android:padding="6dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ati_raja_6" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="88dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_background_default"
                    android:padding="6dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ati_raja_7" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="88dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_background_default"
                    android:padding="6dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ati_raja_8" />
            </LinearLayout>
        </ScrollView>

        <Button
            style="@style/MyButton.Small"
            android:id="@+id/button_info_kelong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:text="@string/label_info_kelong" />
    </RelativeLayout>
</LinearLayout>